--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
 
     "autoload": {
         "psr-4": {
-            "App\\": "App/",
-            "Config\\": "Config/"
+            "App\\": "app/",
+            "Config\\": "config/"
         }
     }
 }
