Création de la fonction d'upload de fichier

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
             "App\\": "src/",
             "Config\\": "config/",
             "Services\\": "services/"
-        }
+        },
+        "files": [
+            "utils/imageUpload.php"
+        ]
     },
     "authors": [
         {
