Ajout de la suppression d'articles dans l'entité et controller

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "Config\\": "config/"
+            "Config\\": "config/",
+            "Services\\": "services/"
         }
     },
     "authors": [
